[gd_scene load_steps=3 format=3 uid="uid://cowrf2ls5gdr6"]

[ext_resource type="Script" uid="uid://buykp41gkxekd" path="res://Cases/Introduction_Case/Scripts/minigame_2.gd" id="1_vdqgs"]
[ext_resource type="Texture2D" uid="uid://crg7kenl0bu0q" path="res://Cases/Introduction_Case/assets/minigame2/monitor.png" id="2_2425y"]

[node name="Minigame_2" type="Node2D"]
script = ExtResource("1_vdqgs")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1155.0
offset_bottom = 650.0
color = Color(1, 1, 0.905882, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(747, 315)
scale = Vector2(1.45313, 1.45313)
texture = ExtResource("2_2425y")

[node name="Sprite2D2" type="Sprite2D" parent="."]

[node name="ClueLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 41.0
offset_top = 58.0
offset_right = 341.0
offset_bottom = 569.0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="nextButton" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 933.0
offset_top = 373.0
offset_right = 993.0
offset_bottom = 404.0
text = "Weiter"

[node name="Buttons" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = 469.0
offset_top = 83.0
offset_right = 1018.0
offset_bottom = 368.0
mouse_filter = 2

[node name="Label" type="Label" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RestartButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 492.0
offset_top = 373.0
offset_right = 651.0
offset_bottom = 404.0
text = "Nochmal probieren"

[connection signal="pressed" from="nextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
